--- a/package.json
+++ b/package.json
@@ -14,5 +14,17 @@
     "node-fetch": "^2.5.0",
     "pug": "2.0.0-beta11",
     "ws": "^7.0.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-transform-object-assign": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/register": "^7.4.4",
+    "@babel/runtime-corejs2": "^7.4.4",
+    "babel-core": "7.0.0-bridge.0"
   }
 }
